objects/HealthCloudGA__EHRProcedureRequest__c.object
<CustomObject>
    <description>A Procedure Request is a record of a request for a procedure to be performed. It can be used to represent a procedure that is planned, that is proposed, or that is ordered, as distinguished by the value of the ProcedureRequestStatus field.</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the person the procedure was performed on</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Procedure Requests</relationshipLabel>
        <relationshipName>EHRProcedureRequests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__BodySite__c</fullName>
        <description>Anatomical location for the procedure</description>
        <label>Body Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <description>High-level categorization of the procedure</description>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CodeLabel__c</fullName>
        <description>Name of the procedure</description>
        <label>Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Code__c</fullName>
        <description>Industry standard code for the procedure</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Encounter associated with the procedure</description>
        <label>Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>EHR Procedure Requests</relationshipLabel>
        <relationshipName>EHRProcedureRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Notes__c</fullName>
        <description>Additional information about the procedure</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OrderedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ordered By</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>EHR Procedure Requests</relationshipLabel>
        <relationshipName>EHRProcedureRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OrderedOn__c</fullName>
        <description>Date and time the request was created</description>
        <label>Ordered On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Stat</fullName>
                </value>
                <value>
                    <fullName>ASAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reason1__c</fullName>
        <description>Reason the procedure was requested</description>
        <label>Reason 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reason2__c</fullName>
        <description>Reason the procedure was requested</description>
        <label>Reason 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Reason3__c</fullName>
        <description>Reason the procedure was requested</description>
        <label>Reason 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ScheduledDateTime__c</fullName>
        <description>Date and time the procedure is scheduled</description>
        <label>Scheduled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemID__c</fullName>
        <description>Record ID from a system outside of Salesforce</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Status__c</fullName>
        <description>Status of the procedure request</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EHR Procedure Request</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ProcRequest-{0}</displayFormat>
        <label>EHR Procedure Request  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Procedure Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>